# Change Log

The format is based on [Keep a Changelog](http://keepachangelog.com/).

## [Unreleased]
## [v1.1.27] - 2021-05-17 05:35:19 Asia/Seoul
### Changed
- 착용여부 목록에서 "입고감+기록요망"을 "보관요망"으로 변경 (#228)

## [v1.1.26] - Sun, 28 Feb 2021 08:48:48 +0900
### Added
- 의류준비 화면에 주문서 태그 노출 - 웨딩촬영 및 본식 (#219)

## [v1.1.25] - Sun, 11 Oct 2020 21:38:27 +0900
### Changed
- 의류준비 화면에 여성의 의류품목에 원피스 추가 (#214)

## [v1.1.24] - Sun, 12 Apr 2020 11:45:32 +0900
### Added
- 의류준비 화면에 사용자 치수에 따른 열린옷장 기성복 사이즈 표시 (#206)

## [v1.1.23] - Sun, 16 Feb 2020 10:34:44 +0900
### Changed
- 영문이름은 자연스럽게 TTS 가 읽을 수 있도록 함 (#195)

## [v1.1.22] - Sat, 11 May 2019 14:20:50 +0900
### Changed
- 최근 대여의류의 자켓에 팔길이 추가 (#189)
- "입고감"에 "온라인예정" 추가

## [v1.1.21] - Tue, 07 May 2019 21:30:16 +0900
### Changed
- 대기실 화면에서 택배반납과 관련된 내용 삭제 (#193)

## [v1.1.20] - Sun, 21 Apr 2019 12:08:19 +0900
### Fixed
- 의류선택화면에서 기증이 없는 의류에 대한 예외처리 (#191)

## [v1.1.19] - Sun, 30 Sep 2018 12:48:40 +0900
### Fixed
- 탈의실 이름영역의 style 조정 (#181)

## [v1.1.18] - Sun, 16 Sep 2018 14:18:57 +0900
### Changed
- frontend build system 을 bower+grunt 에서 webpack 으로 변경
- 탈의실안내 화면의 대여자이름과 탈의실 번호를 더 크게 함 (#181)
- 탈의실안내 화면에 TTS 기능 강화 (#181)

## [v1.1.17] - Sat, 01 Sep 2018 17:04:43 +0900

### Added
- /room 에 TTS 기능 추가 (#181)

## [v1.1.16] - Fri, 03 Aug 2018 07:30:51 +0900

### Fixed
- `GET /room` 에서 발생하는 SecurityError 를 해결

## [v1.1.15] - Tue, 24 Jul 2018 13:39:50 +0900

### Added
- 변경 가능한 상태를 응답하는 `api#status` route 추가 (#183)

### Changed
- 탈의에서 의류준비가 된 주문서를 dashboard#room 에 표시

## [v1.1.14] - Wed, 11 Jul 2018 12:46:15 +0900

### Added
- 탈의실용 대시보드 추가 dashboard#room (#181)

## [v1.1.13] - Fri, 18 May 2018 11:28:16 +0900

### Changed
- TTS API 변경에 따른 패치적용 (#177)

## [v1.1.12] - Sat, 05 May 2018 16:32:21 +0900

### Changed
- `./db` 을 volume 으로 지정

## [v1.1.11] - Fri, 04 May 2018 20:47:48 +0900

### Fixed
- Set default config file in docker image

## [v1.1.10] - Fri, 04 May 2018 15:16:27 +0900

### Added
- travis-ci 에서 docker image 를 build
